--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,11 +56,11 @@ endif()
 # e.g. make, but not VisualStudio or XCode
 # Note that CMAKE_BUILD_TYPE is initialized to "" on the initial cmake-gui
 # run, so we check for that and set the default appropriately
-if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
-  SET(CMAKE_BUILD_TYPE Release CACHE STRING "Build Configuration (Release, Debug, RelWithDebInfo, or MinSizeRel" FORCE)
-else()
-  SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Build Configuration (Release, Debug, RelWithDebInfo, or MinSizeRel" FORCE)
-endif()
+#if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
+#  SET(CMAKE_BUILD_TYPE Release CACHE STRING "Build Configuration (Release, Debug, RelWithDebInfo, or MinSizeRel" FORCE)
+#else()
+#  SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Build Configuration (Release, Debug, RelWithDebInfo, or MinSizeRel" FORCE)
+#endif()
 
 # Set default GMAT installation location
 # Can be overridden by using "-DCMAKE_INSTALL_PREFIX=/foo/bar" at command line
