Have csalt building with julia. Working on writing orbital averaging code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ INCLUDE(CMakeDependentOption)
 OPTION(GMAT_INCLUDE_CSALT "Build CSALT with GMAT" ON)
 CMAKE_DEPENDENT_OPTION(GMAT_INCLUDE_CSALT_TESTPROGRAM "Build CSALT test program" ON "GMAT_INCLUDE_CSALT" ON)
 CMAKE_DEPENDENT_OPTION(GMAT_INCLUDE_CSALT_INSTALL_SNOPT "Install SNOPT libraries with CSALT" ON "GMAT_INCLUDE_CSALT" ON)
+CMAKE_DEPENDENT_OPTION(GMAT_INCLUDE_CSALT_WITH_JULIA_PROGRAM "Build CSALT with Julia program" ON "GMAT_INCLUDE_CSALT" ON)
 
 # ====================================================================
 # Enable boost::variant as needed
