--- a/src/csaltApplicationWithJulia/CMakeLists.txt
+++ b/src/csaltApplicationWithJulia/CMakeLists.txt
@@ -5,13 +5,20 @@ MESSAGE("CSALT application with Julia" ${VERSION})
 SET(TargetName CSALTApplicationWithJulia)
 
 # Find julia
-LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/find")
+LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/depends/CMakeModules")
 FIND_PACKAGE(Julia 1.7.0 REQUIRED)
 
-# Define compiler definition for path to Julia src
+# Define compiler definition for path to Julia src (TO BE REMOVED)
 SET(FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/jlsrc" CACHE FILEPATH "File path to Julia source files")
 FILE(TO_CMAKE_PATH "${FILE_PATH}" FILE_PATH_NORMALIZED)
 ADD_DEFINITIONS(-DJLSRC="${FILE_PATH_NORMALIZED}")
+
+# Find jluna (currently just setting file paths)
+FIND_LIBRARY(jluna REQUIRED 
+  NAMES jluna
+  PATHS "/data/home/granthec/Software/jluna/lib"
+)
+SET(jluna_INCLUDE_DIR "/data/home/granthec/Software/jluna/lib/include/jluna")
 
 # Add preprocessor definitions
 ADD_DEFINITIONS("-D_DYNAMICLINK")
@@ -55,6 +62,7 @@ TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC ${CSALT_DIRS})
 TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC ${CSALT_APP_JL_DIRS})
 TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC ${SNOPT_INCLUDE_DIR})
 TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC ${Boost_INCLUDE_DIR})
+TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC ${jluna_INCLUDE_DIR})
 
 # Link needed libraries
 TARGET_LINK_LIBRARIES(${TargetName} PRIVATE ${SNOPT_CPPLIBRARY})
@@ -62,6 +70,11 @@ TARGET_LINK_LIBRARIES(${TargetName} PRIVATE ${SNOPT_LIBRARY})
 TARGET_LINK_LIBRARIES(${TargetName} PRIVATE CSALT)
 TARGET_LINK_LIBRARIES(${TargetName} PRIVATE GmatUtil)
 TARGET_LINK_LIBRARIES(${TargetName} PRIVATE "$<BUILD_INTERFACE:Julia::Julia>")
+TARGET_LINK_LIBRARIES(${TargetName} PRIVATE "$<BUILD_INTERFACE:Threads::Threads>")
+TARGET_LINK_LIBRARIES(${TargetName} PRIVATE ${jluna})
+
+# Set building with C++ STD 20
+TARGET_COMPILE_FEATURES(${TargetName} PRIVATE cxx_std_20)
 
 if(UNIX)
   if(APPLE)
