--- a/src/csaltApplicationWithJulia/jlsrc/Project.toml
+++ b/src/csaltApplicationWithJulia/jlsrc/Project.toml
@@ -1,6 +1,8 @@
 [deps]
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
